<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnAffichage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/black"
        android:enabled="false"
        android:fontFamily="sans-serif-black"
        android:includeFontPadding="false"
        android:text="@string/textes"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/btnPRouge"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPRouge"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/rouge"
        android:fontFamily="sans-serif-black"
        android:textSize="22sp"
        android:text="@string/plus_rouge"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnPVert"
        app:layout_constraintEnd_toStartOf="@+id/btnMRouge"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAffichage"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnMRouge"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/rouge"
        android:fontFamily="sans-serif-black"
        android:text="@string/moins_rouge"
        android:textSize="22sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnMVert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/btnPRouge"
        app:layout_constraintTop_toBottomOf="@+id/btnAffichage"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnPVert"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/plus_vert"
        android:fontFamily="sans-serif-black"
        android:textSize="22sp"

        android:textColor="@color/black"
        android:backgroundTint="@color/vert"
        app:layout_constraintBottom_toTopOf="@+id/btnPBleu"
        app:layout_constraintEnd_toStartOf="@+id/btnMVert"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPRouge" />

    <Button
        android:id="@+id/btnMVert"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/moins_vert"
        android:textSize="22sp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        android:backgroundTint="@color/vert"
        app:layout_constraintBottom_toTopOf="@+id/btnMBleu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/btnPVert"
        app:layout_constraintTop_toBottomOf="@+id/btnMRouge" />

    <Button
        android:id="@+id/btnPBleu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/plus_bleu"
        android:fontFamily="sans-serif-black"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/bleu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnMBleu"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPVert" />

    <Button
        android:id="@+id/btnMBleu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/moins_bleu"
        android:fontFamily="sans-serif-black"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/bleu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/btnPBleu"
        app:layout_constraintTop_toBottomOf="@+id/btnMVert" />


</androidx.constraintlayout.widget.ConstraintLayout>